[project]
name = "memoria"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.3.2",
    "bcrypt>=5.0.0",
    "fastapi>=0.136.1",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.29",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]
